Functional changes to blog editor & reader

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["frontmatter", "timeago"]
+  "cSpell.words": [
+    "falso",
+    "frontmatter",
+    "Gajbhiye",
+    "mdast",
+    "ngneat",
+    "Rahul",
+    "timeago"
+  ]
 }
