--- a/components.json
+++ b/components.json
@@ -9,5 +9,10 @@
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
+  },
+  "aliases": {
+    "utils": "@/lib/utils",
+    "components": "@/components",
+    "ui": "@/components/ui"
   }
 }
