--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "schema": "src/schema/schema.prisma"
   },
   "dependencies": {
+    "@hashicorp/remark-plugins": "^0.3.1",
     "@hookform/resolvers": "^3.7.0",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
     "@mdxeditor/editor": "^3.7.0",
-    "@next/mdx": "^14.2.4",
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.16.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -30,7 +28,6 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.0.3",
-    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -46,6 +43,14 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-type-animation": "^3.2.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.13.2",
+    "rehype-slug": "^6.0.0",
+    "remark-directive": "^3.0.0",
+    "remark-directive-rehype": "^0.4.2",
+    "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0",
+    "shiki": "^1.10.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -56,14 +61,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prettier": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.16.1",
-    "style-loader": "^4.0.0",
+    "prisma": "^5.16.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
