--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,8 @@
     ],
 
     /* Paths */
-    "baseUrl": "src/",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
