--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
+    "config": "tailwind.config.ts",
     "css": "@/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
@@ -12,9 +12,6 @@
   },
   "aliases": {
     "utils": "@/lib/utils",
-    "components": "@/components",
-    "ui": "@/components/ui",
-    "pages": "@/components/pages",
-    "layouts": "@/components/layouts"
+    "components": "@/components"
   }
 }
