--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
 
     /* Paths */
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"],
     }
   },
-  "include": ["next-env.d.ts", "./src/*", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
