--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
     /* Paths */
     "baseUrl": "src/",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "components": ["@/components"],
+      "utils": ["@/lib/utils"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
