--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,8 @@
     "baseUrl": "src/",
     "paths": {
       "@/*": ["./*"],
-      "components": ["@/components"],
-      "utils": ["@/lib/utils"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts","./src/*.tsx", "./src/*.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
