--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
     ],
 
     /* Paths */
-    "baseUrl": "src/",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["src/*", "@/*"]
     }
   },
   "include": ["next-env.d.ts","./src/*.tsx", "./src/*.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
