--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,11 @@
     ],
 
     /* Paths */
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["src/*", "@/*"]
+      "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts","./src/*.tsx", "./src/*.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
