--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "build-test": "next build && next start -p 4000",
     "start": "next start",
     "lint": "next lint"
   },
@@ -63,6 +64,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8",
     "prettier": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
