Overall UI modification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,14 @@
     "falso",
     "frontmatter",
     "Gajbhiye",
+    "hoverline",
     "mdast",
+    "mdxeditor",
     "ngneat",
     "Rahul",
+    "rahulgajbhiye",
+    "tailwindcss",
+    "techstack",
     "timeago"
   ]
 }
