--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "cSpell.words": [
     "cryptosh",
+    "drei",
     "falso",
     "frontmatter",
     "Gajbhiye",
+    "GLTF",
     "hoverline",
     "manifester",
     "mdast",
